objects/LLC_BI__Pricing_Rate_Component__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Applied_Loan_Percentage__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field is required. It is manually populated. It identifies the percentage of one interest rate that is applied to a loan. If the percentage is less than 100%, additional interest rates must be applied to reach the 100% total.</description>
        <label>Applied Loan Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Calculated_Monthly_Interest_Rate__c</fullName>
        <description>The system automatically populates this field with a formula to convert the annual interest rate to the calculated monthly interest rate when the default equation Annual Interest Rate / 12 = Monthly Interest Rate is not applicable. The system uses this field for Rate &amp; Payment Structure calculations if the Monthly_Interest_Rate_Field field on Product Feature contains the value Calculated_Monthly_Interest_Rate. This field is not editable.</description>
        <formula>EXP((1/12) * LN(1 + LLC_BI__Rate__c + LLC_BI__Spread__c)) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the formula to calculate the conversion from annual interest rate to monthly interest rate.</inlineHelpText>
        <label>Calculated Monthly Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>This field is optional. It is manually populated. The loan officer uses this text field to add comments to the rate.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency__c</fullName>
        <description>This field is required. It is manually populated. It indidcates the Payment Frequency for a Pricing Rate Component record.</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frequency_Semimonthly</fullName>
                </value>
                <value>
                    <fullName>Frequency_Monthly</fullName>
                    <default>true</default>
                    <label>Frequency_Monthly</label>
                </value>
                <value>
                    <fullName>Frequency_Bimonthly</fullName>
                </value>
                <value>
                    <fullName>Frequency_Quarterly</fullName>
                </value>
                <value>
                    <fullName>Frequency_Semiannually</fullName>
                </value>
                <value>
                    <fullName>Frequency_Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Index__c</fullName>
        <description>This field is required. It is manually populated. It indicates the Index applied to a Pricing Rate Component record.</description>
        <label>Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COF_mo_1</fullName>
                </value>
                <value>
                    <fullName>COF_mo_2</fullName>
                </value>
                <value>
                    <fullName>COF_mo_3</fullName>
                </value>
                <value>
                    <fullName>COF_mo_4</fullName>
                </value>
                <value>
                    <fullName>COF_mo_5</fullName>
                </value>
                <value>
                    <fullName>COF_mo_6</fullName>
                </value>
                <value>
                    <fullName>COF_Overnight</fullName>
                </value>
                <value>
                    <fullName>Fed_Funds_Current</fullName>
                </value>
                <value>
                    <fullName>Fed_Funds_Prior_Day</fullName>
                </value>
                <value>
                    <fullName>LIBOR_mo_1</fullName>
                </value>
                <value>
                    <fullName>LIBOR_mo_12</fullName>
                </value>
                <value>
                    <fullName>LIBOR_mo_2</fullName>
                </value>
                <value>
                    <fullName>LIBOR_mo_3</fullName>
                </value>
                <value>
                    <fullName>LIBOR_mo_6</fullName>
                </value>
                <value>
                    <fullName>LIBOR_Overnight</fullName>
                </value>
                <value>
                    <fullName>Prime</fullName>
                </value>
                <value>
                    <fullName>Prime_FRED</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_1</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_10</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_2</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_3</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_30</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_4</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_5</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_7</fullName>
                </value>
                <value>
                    <fullName>TCMI_yr_1</fullName>
                </value>
                <value>
                    <fullName>TCMI_yr_10</fullName>
                </value>
                <value>
                    <fullName>TCMI_yr_2</fullName>
                </value>
                <value>
                    <fullName>TCMI_yr_20</fullName>
                </value>
                <value>
                    <fullName>TCMI_yr_3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Type__c</fullName>
        <description>Users populate this optional picklist field to apply the selected interest rate type to a rate stream. By default, it is fixed.</description>
        <inlineHelpText>Select an interest rate type to apply to the rate stream.</inlineHelpText>
        <label>Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Fixed with Index</fullName>
                </value>
                <value>
                    <fullName>Floating with Index</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is required. It is manually populated. It indicates whether or not the payment for a Pricing Rate Component record is fixed.</description>
        <label>Is Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Swap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is manually populated. It indicates whether or not a SWAP is included as part of a Pricing Rate Component record.</description>
        <label>Is Swap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Stream__c</fullName>
        <description>This field is required. It is automatically populated. It identifies the Pricing Stream record associated with the Pricing Rate Component record.</description>
        <label>Pricing Stream</label>
        <referenceTo>LLC_BI__Pricing_Stream__c</referenceTo>
        <relationshipLabel>Pricing Rate Components</relationshipLabel>
        <relationshipName>Pricing_Rate_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate__c</fullName>
        <description>This field is required. It is manually populated. It indicates the interest rate applied to a Pricing Rate Component record.</description>
        <label>Rate</label>
        <precision>12</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread__c</fullName>
        <description>This field is optional. It is manually populated. It indicates the interest spread applied to a variable rate index for a Pricing Rate Component record.</description>
        <label>Spread</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.html</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pricing Rate Component</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Rate Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>